Basket - fix mobile & extra-mobile version - full adaptive.

--- a/src/pug/components/basket/_basket.pug
+++ b/src/pug/components/basket/_basket.pug
@@ -39,6 +39,7 @@ section.section#basket.basket
   .section__bg.section__bg--light
 
   .basket__wrapper
+    include ./_tabsLink
     +basketTabs(basketTabsData, 0)
     include ./_card
 
