--- a/src/pug/components/basket/_tabsLink.pug
+++ b/src/pug/components/basket/_tabsLink.pug
@@ -1,3 +1,3 @@
 .c-grid
-  .basket__row.basket__row-0.basket__row--tabs
+  .basket__row.basket__row-0.basket__row--link
     a.basket__link(href="#" class="" title="")!= "← Wróc do zakupów"
