Footer - fix mobile resolution font-size.

--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -23,13 +23,13 @@ footer#footer.footer
           .social
             ul.social__list
               li.social__item
-                a.social__link(href="#" class="" title="")
+                a.social__link.social__link--fb(href="#" class="" title="facebook-logo")
                   i.icon-font.icon-facebook-logo
               li.social__item
-                a.social__link(href="#" class="" title="")
+                a.social__link.social__link--yb(href="#" class="" title="youtube-logo")
                   i.icon-font.icon-youtube-logo
               li.social__item
-                a.social__link(href="#" class="" title="")
+                a.social__link.social__link--in(href="#" class="" title="instagram-logo")
                   i.icon-font.icon-instagram-logo
 
         .footer__wrapper-right
@@ -41,13 +41,13 @@ footer#footer.footer
         .social
           ul.social__list
             li.social__item
-              a.social__link(href="#" class="" title="")
+              a.social__link.social__link--fb(href="#" class="" title="facebook-logo")
                 i.icon-font.icon-facebook-logo
             li.social__item
-              a.social__link(href="#" class="" title="")
+              a.social__link.social__link--yb(href="#" class="" title="youtube-logo")
                 i.icon-font.icon-youtube-logo
             li.social__item
-              a.social__link(href="#" class="" title="")
+              a.social__link.social__link--in(href="#" class="" title="instagram-logo")
                 i.icon-font.icon-instagram-logo
 
         +nav('footer', dataObj.navFooter)
