--- a/src/scss/_macros/_nav.scss
+++ b/src/scss/_macros/_nav.scss
@@ -85,10 +85,12 @@
       align-items: center;
       padding-bottom: 0;
       color: #8d96ae;
-      font-size: 16px;
       font-weight: 500;
-      @include respond(max-small) {
-        font-size: 12px;
+      @include fluid(font-size, 320px, 1920px, 12px, 16px);
+      
+      &:hover {
+        color: #0a1723;
+        @include transition(color);
       }
     }
   }
