--- a/src/pug/components/basket/_card.pug
+++ b/src/pug/components/basket/_card.pug
@@ -49,7 +49,9 @@
 
       .basket__card-col.basket__card-col-3
         a.basket__link(href="#" class="" title="")!= "← Wróc do zakupów"
-        button.basket__btn(type="submit")!= "Następny krok"
+        button.basket__btn(type="submit")!= "Złóż zamówienie"
+
++basketTabs(basketTabsData, 0)
 
 .basket__row.basket__row-1.basket__row--card(style="padding-bottom: 0;")
   .basket__card
@@ -92,4 +94,4 @@
 
           .basket__card-col.basket__card-col-3
             a.basket__link(href="#" class="" title="")!= "← Wróc do zakupów"
-            button.basket__btn(type="submit")!= "Następny krok"
+            button.basket__btn(type="submit")!= "Złóż zamówienie"
