--- a/src/pug/components/basket/_delivery.pug
+++ b/src/pug/components/basket/_delivery.pug
@@ -61,6 +61,11 @@
                 img(src="./img/img-płatnicza.png" srcset="./img/img-płatnicza@2x.png 2x" alt="" title="")
               p!= "Karta płatnicza"
 
+            a.basket__delivery-box(href="#" class="" title="")
+              div
+                img(src="./img/img-gotówka.png" srcset="./img/img-gotówka@2x.png 2x" alt="" title="")
+              p!= "Gotówka"
+
       .basket__delivery-col.basket__delivery-col--2
         button.basket__btn(type="submit")!= "Następny krok"
 
