--- a/src/scss/_components/_basket.scss
+++ b/src/scss/_components/_basket.scss
@@ -67,7 +67,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 68px;
     border-radius: 2em;
     border: 2px solid #d72d42;
     background-color: #d72d42;
@@ -136,14 +136,14 @@
       font-size: 18px;
       font-weight: 500;
       @include fluid(margin-right, 320px, 1440px, 15px, 27px);
-      @include fluid(font-size, 320px, 1440px, 14px, 18px);
+      @include fluid(font-size, 320px, 1440px, 14px, 24px);
       @include transition(color);
 
       &.is-active {
         color: #0a1723;
         font-size: 30px;
         font-weight: bold;
-        @include fluid(font-size, 320px, 1440px, 24px, 30px);
+        @include fluid(font-size, 320px, 1440px, 24px, 36px);
         @include transition(color);
       }
     }
@@ -198,6 +198,12 @@
       max-width: 800px;
       margin-left: auto;
       margin-right: auto;
+
+      &--wm {
+        .c-form__checkbox-wrapper {
+          margin-bottom: 0;
+        }
+      }
     }
   }
 
@@ -720,7 +726,7 @@
     &-name {
       color: #0a1723;
       font-weight: 500;
-      @include fluid(font-size, 320px, 1440px, 24px, 26px);
+      @include fluid(font-size, 320px, 1440px, 24px, 36px);
     }
 
     &-price {
@@ -806,11 +812,10 @@
     &-info {
       color: #0a1723;
       font-weight: 500;
-      @include fluid(font-size, 320px, 1440px, 16px, 20px);
+      @include fluid(font-size, 320px, 1440px, 20px, 30px);
 
       span {
         color: #d72d42;
-        @include fluid(font-size, 320px, 1440px, 14px, 20px);
       }
     }
 
