--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,3 +58,6 @@
 @import "_components/about";
 
 @import "_components/basket";
+
+@import "_components/pedalbox/pedalbox";
+@import "_components/pedalbox/reduced";
