--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -282,19 +282,25 @@
   z-index: -1;
 }
 
-/* line 242, src/scss/_vendor/selectric/_selectric.scss */
+/* line 241, src/scss/_vendor/selectric/_selectric.scss */
+.reduced .selectric-items {
+  left: auto;
+  right: 0;
+}
+
+/* line 247, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-scroll {
   height: 100%;
   overflow: auto;
 }
 
-/* line 247, src/scss/_vendor/selectric/_selectric.scss */
+/* line 252, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-above .selectric-items {
   top: auto;
   bottom: 100%;
 }
 
-/* line 252, src/scss/_vendor/selectric/_selectric.scss */
+/* line 257, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items ul, .selectric-items li {
   list-style: none;
   padding: 0;
@@ -304,7 +310,7 @@
   min-height: 20px;
 }
 
-/* line 261, src/scss/_vendor/selectric/_selectric.scss */
+/* line 266, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li {
   position: relative;
   display: -webkit-box;
@@ -320,7 +326,7 @@
   padding: 5px 17px;
 }
 
-/* line 273, src/scss/_vendor/selectric/_selectric.scss */
+/* line 278, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:after {
   content: '';
   position: absolute;
@@ -331,30 +337,30 @@
   background-color: #e4eaef;
 }
 
-/* line 283, src/scss/_vendor/selectric/_selectric.scss */
+/* line 288, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:last-of-type {
   border-bottom: 0;
 }
 
-/* line 287, src/scss/_vendor/selectric/_selectric.scss */
+/* line 292, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li.selected {
   background: #e4eaef;
   color: #4d5964;
 }
 
-/* line 292, src/scss/_vendor/selectric/_selectric.scss */
+/* line 297, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li.highlighted {
   background: #e4eaef;
   color: #4d5964;
 }
 
-/* line 297, src/scss/_vendor/selectric/_selectric.scss */
+/* line 302, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:hover {
   background: #e4eaef;
   color: #4d5964;
 }
 
-/* line 303, src/scss/_vendor/selectric/_selectric.scss */
+/* line 308, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .disabled {
   filter: alpha(opacity=50);
   opacity: 0.5;
@@ -367,7 +373,7 @@
           user-select: none;
 }
 
-/* line 313, src/scss/_vendor/selectric/_selectric.scss */
+/* line 318, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group .selectric-group-label {
   font-weight: bold;
   padding-left: 10px;
@@ -380,13 +386,13 @@
   color: #444;
 }
 
-/* line 322, src/scss/_vendor/selectric/_selectric.scss */
+/* line 327, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group.disabled li {
   filter: alpha(opacity=100);
   opacity: 1;
 }
 
-/* line 327, src/scss/_vendor/selectric/_selectric.scss */
+/* line 332, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group li {
   padding-left: 25px;
 }
@@ -7861,6 +7867,337 @@ section.section {
   /* line 893, src/scss/_components/_basket.scss */
   .basket__additional-link {
     font-size: 14px;
+  }
+}
+
+/* line 4, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper {
+  position: relative;
+}
+
+/* line 7, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-0 {
+  background-color: #ecf7ff;
+}
+
+/* line 11, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-bg {
+  overflow: hidden;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* line 20, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-bg span {
+  z-index: 0;
+  position: absolute;
+}
+
+/* line 24, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-bg span:nth-child(1) {
+  bottom: 30px;
+  left: -15px;
+  width: calc(100% + 30px);
+  height: 100px;
+  background-color: #e4eaef;
+  -webkit-transform: rotate(-1.7deg);
+      -ms-transform: rotate(-1.7deg);
+          transform: rotate(-1.7deg);
+}
+
+/* line 33, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-bg span:nth-child(2) {
+  left: 0;
+  top: -74px;
+  width: 100%;
+  height: 100%;
+  background-color: #0a1723;
+  -webkit-transform: skewY(-0.5deg);
+      -ms-transform: skewY(-0.5deg);
+          transform: skewY(-0.5deg);
+}
+
+/* line 42, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__wrapper-bg span:nth-child(3) {
+  top: -120px;
+  right: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #d6273c;
+  -webkit-transform: skewY(5deg);
+      -ms-transform: skewY(5deg);
+          transform: skewY(5deg);
+}
+
+/* line 54, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row {
+  z-index: 1;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/* line 60, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-0 {
+  min-height: 287px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+@media screen and (max-width: 575px) {
+  /* line 60, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-0 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/* line 68, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-0 .reduced__row-left {
+  width: 300px;
+}
+
+@media screen and (max-width: 767px) {
+  /* line 68, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-0 .reduced__row-left {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 68, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-0 .reduced__row-left {
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+/* line 79, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-0 .reduced__row-left img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 88, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-0 .reduced__row-right {
+  width: 100%;
+  max-width: calc(100% - 300px);
+}
+
+@media screen and (max-width: 767px) {
+  /* line 88, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-0 .reduced__row-right {
+    max-width: calc(100% - 250px);
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 88, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-0 .reduced__row-right {
+    max-width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+  }
+}
+
+/* line 103, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-1 {
+  min-height: 333px;
+  padding-bottom: 74px;
+}
+
+@media screen and (max-width: 575px) {
+  /* line 103, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+/* line 112, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-1 .reduced__row-left,
+.reduced__row-1 .reduced__row-right {
+  width: 50%;
+}
+
+/* line 117, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-1 .reduced__row-left {
+  padding-right: 15px;
+}
+
+@media screen and (max-width: 1365px) {
+  /* line 117, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-1 .reduced__row-left {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 117, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-1 .reduced__row-left {
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+/* line 128, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__row-1 .reduced__row-right {
+  padding-left: 55px;
+}
+
+@media screen and (max-width: 1365px) {
+  /* line 128, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-1 .reduced__row-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 60%;
+    padding-left: 0;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 128, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__row-1 .reduced__row-right {
+    width: 100%;
+    padding-bottom: 25px;
+  }
+}
+
+/* line 144, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__title {
+  font-weight: bold;
+  padding-bottom: 24px;
+  font-size: 24px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 144, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__title {
+    padding-bottom: calc(24px + 12 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 144, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__title {
+    padding-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 144, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__title {
+    font-size: calc(24px + 24 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 144, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__title {
+    font-size: 48px;
+  }
+}
+
+/* line 150, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__subtitle {
+  text-shadow: 0 3px 7px rgba(0, 0, 0, 0.35);
+  color: #fff;
+  text-align: right;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 150, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__subtitle {
+    font-size: calc(18px + 14 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 150, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__subtitle {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 1365px) {
+  /* line 150, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__subtitle {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 150, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__subtitle {
+    text-align: center;
+  }
+}
+
+/* line 164, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__text {
+  width: 100%;
+  max-width: 1040px;
+  line-height: 1.66667;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 164, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__text {
+    font-size: calc(14px + 4 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 164, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 164, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__text {
+    padding-bottom: 25px;
+  }
+}
+
+/* line 173, src/scss/_components/pedalbox/_reduced.scss */
+.reduced__text > span {
+  display: block;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 767px) {
+  /* line 173, src/scss/_components/pedalbox/_reduced.scss */
+  .reduced__text > span {
+    padding-bottom: 24px;
   }
 }
 
