Pedalbox page - create main pedalbox section - full adaptive.

--- a/src/pug/components/pedalbox/_pedalbox.pug
+++ b/src/pug/components/pedalbox/_pedalbox.pug
@@ -6,4 +6,15 @@ section.section#pedalbox.pedalbox
   .c-grid
     .pedalbox__wrapper
 
+      .pedalbox__row.pedalbox__row-0
+        .pedalbox__row-left
+          img(src="./img/img-pedalbox.png" srcset="./img/img-pedalbox@2x.png 2x" alt="" title="")
+
+        .pedalbox__row-right
+          h1.pedalbox__title!= "PedalBox"
+          p.pedalbox__text!= "Szybsza reakcja na pedał gazu i sportowa charakterystyka – <span>do 65% szybciej</span>. Zmień odczucia z prowadzenia swojego samochodu na zawsze. <span>Made in Germany</span>"
+
+      .pedalbox__row.pedalbox__row-1
+        a.pedalbox__btn.c-btn(href="#" class="" title="")!= "Poznaj PedalBox"
+
 // PEDALBOX :: END
