--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -36,7 +36,7 @@
 @import "_macros/nav";
 @import "_macros/hamburger";
 //@import "_macros/title";
-//@import "_macros/btn";
+@import "_macros/btn";
 //@import "_macros/modal";
 //@import "_macros/form";
 ///
