--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -8177,6 +8177,184 @@ section.section {
   display: block;
 }
 
+/* line 4, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__wrapper {
+  padding-top: 55px;
+  padding-bottom: 55px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 4, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__wrapper {
+    padding-top: calc(55px + 95 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 4, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__wrapper {
+    padding-top: 150px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 4, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__wrapper {
+    padding-bottom: calc(55px + 205 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 4, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__wrapper {
+    padding-bottom: 260px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 9, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__title, .certificates__text {
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+  }
+}
+
+/* line 18, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__title {
+  font-weight: bold;
+  padding-bottom: 30px;
+  font-size: 24px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 18, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__title {
+    padding-bottom: calc(30px + 23 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 18, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__title {
+    padding-bottom: 53px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 18, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__title {
+    font-size: calc(24px + 24 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 18, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__title {
+    font-size: 48px;
+  }
+}
+
+/* line 24, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__text {
+  width: 100%;
+  max-width: 940px;
+  line-height: 1.66667;
+  padding-bottom: 30px;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 24, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__text {
+    padding-bottom: calc(30px + 41 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 24, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__text {
+    padding-bottom: 71px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 24, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__text {
+    font-size: calc(14px + 4 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 24, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__text {
+    font-size: 18px;
+  }
+}
+
+/* line 31, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__text span {
+  font-weight: bold;
+}
+
+/* line 36, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__img {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: calc(100% / 4);
+}
+
+@media screen and (max-width: 991px) {
+  /* line 36, src/scss/_components/pedalbox/_certificates.scss */
+  .certificates__img {
+    width: calc(100% / 2);
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+/* line 47, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__img:hover img {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+  -webkit-transition: -webkit-filter 0.3s ease-in-out;
+  transition: -webkit-filter 0.3s ease-in-out;
+  -o-transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
+}
+
+/* line 53, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__img img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+  -webkit-transition: -webkit-filter 0.3s ease-in-out;
+  transition: -webkit-filter 0.3s ease-in-out;
+  -o-transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
+}
+
+/* line 63, src/scss/_components/pedalbox/_certificates.scss */
+.certificates__img-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 /* line 4, src/scss/_components/pedalbox/_reduced.scss */
 .reduced__wrapper {
   position: relative;
