--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -60,5 +60,6 @@
 @import "_components/basket";
 
 @import "_components/pedalbox/pedalbox";
+@import "_components/pedalbox/installation";
 @import "_components/pedalbox/certificates";
 @import "_components/pedalbox/reduced";
