--- a/src/pug/pedalbox.pug
+++ b/src/pug/pedalbox.pug
@@ -10,5 +10,6 @@ block content
   div.body.body--start(class!= contentClassName)
 
     include ./components/pedalbox/_pedalbox
+    include ./components/pedalbox/_installation
     include ./components/pedalbox/_certificates
     include ./components/pedalbox/_reduced
