Pedalbox page - create application section - full adaptive.

--- a/src/pug/pedalbox.pug
+++ b/src/pug/pedalbox.pug
@@ -10,6 +10,7 @@ block content
   div.body.body--start(class!= contentClassName)
 
     include ./components/pedalbox/_pedalbox
+    include ./components/pedalbox/_application
     include ./components/pedalbox/_details
     include ./components/pedalbox/_installation
     include ./components/pedalbox/_certificates
