--- a/src/scss/_vendor/selectric/_selectric.scss
+++ b/src/scss/_vendor/selectric/_selectric.scss
@@ -300,6 +300,10 @@ $selectric-font-size:       16px !default;                                      
 
     &:last-of-type {
       border-bottom: 0;
+
+      &:after {
+        display: none;
+      }
     }
 
     &.selected {
