--- a/src/scss/_components/pedalbox/_item.scss
+++ b/src/scss/_components/pedalbox/_item.scss
@@ -176,6 +176,15 @@
             }
           }
         }
+
+        h3 {
+          @include fluid(font-size, 320px, 1440px, 18px, 24px);
+        }
+
+        p,
+        span {
+          @include fluid(font-size, 320px, 1440px, 14px, 16px);
+        }
       }
     }
   }
