--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -154,7 +154,7 @@ section {
     }
     &--in {
       &:hover {
-        background-color: #E24F4E;
+        background-color: #E33A61;
         @include transition(background-color);
       }
     }
