--- a/src/pug/utilities/_mixin/_nav.pug
+++ b/src/pug/utilities/_mixin/_nav.pug
@@ -46,7 +46,7 @@ mixin navIconPNG(classMod, arrData)
           a.nav__link(
             href!= arrData[idx].href
             title=""
-            class!= (idx === 0) ? "is-active nav__link-" + idx: "nav__link-" + idx
+            class!= "nav__link-" + idx
             navdrop-js!= (idx === 2) ? 'navdrop-js':''
           )
             .nav__link-icon
