--- a/src/scss/_macros/_nav.scss
+++ b/src/scss/_macros/_nav.scss
@@ -107,7 +107,7 @@
   &__link {
     position: relative;
     display: flex;
-    padding-bottom: 16px;
+    //padding-bottom: 16px;
     color: #7984a1;
     font-size: 14px;
     font-weight: 500;
@@ -146,14 +146,14 @@
     }
 
     &-icon {
-      opacity: 0;
+      display: none;
       position: absolute;
       top: calc(100% - 8px);
       left: 50%;
       transform: translateX(-50%);
       @include transition(opacity);
       @include respond(max-large) {
-        opacity: 1;
+        display: block;
         position: static;
         transform: translateX(0);
         width: 31px;
