Pedalbox page - edits v0.1.

--- a/src/pug/components/pedalbox/_pedalbox.pug
+++ b/src/pug/components/pedalbox/_pedalbox.pug
@@ -15,6 +15,6 @@ section.section#pedalbox.pedalbox
           p.pedalbox__text!= "Szybsza reakcja na pedał gazu i sportowa charakterystyka – <span>do 65% szybciej</span>. Zmień odczucia z prowadzenia swojego samochodu na zawsze. <span>Made in Germany</span>"
 
       .pedalbox__row.pedalbox__row-1
-        a.pedalbox__btn.c-btn(href="#" class="" title="")!= "Poznaj PedalBox"
+        a.pedalbox__btn.c-btn(href="#working" class="" title="" anchor-js)!= "Poznaj PedalBox"
 
 // PEDALBOX :: END
