--- a/src/scss/_components/pedalbox/_pedalbox.scss
+++ b/src/scss/_components/pedalbox/_pedalbox.scss
@@ -82,6 +82,12 @@
       }
     }
   }
+
+  &__btn {
+    @include respond(max-small) {
+      display: none;
+    }
+  }
 }
 
 // SECTION PEDALBOX :: END
