--- a/src/scss/_components/pedalbox/_details.scss
+++ b/src/scss/_components/pedalbox/_details.scss
@@ -130,8 +130,8 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 50px;
-          height: 50px;
+          width: 49px;
+          height: 49px;
           border-radius: 100%;
           border: 1px solid #95a6b2;
           background-color: transparent;
@@ -276,6 +276,16 @@
     border-radius: 5px;
     background-color: #b1bec7;
     @include fluid(height, 320px, 1440px, 60px, 76px);
+    @include transition(background-color);
+    @include respond(max-small) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &:hover {
+      background-color: #0A1723;
+      @include transition(background-color);
+    }
 
     > div {
       &:first-of-type {
