--- a/src/scss/_components/pedalbox/_installation.scss
+++ b/src/scss/_components/pedalbox/_installation.scss
@@ -19,11 +19,31 @@
 
     &-1 {
       z-index: 1;
-      background-image: url('../img/img-bg-installation.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
+      overflow: hidden;
+      position: relative;
       @include fluid(min-height, 320px, 1440px, 230px, 300px);
+
+      &:hover {
+        &:before {
+          transform: scale(1.1);
+          @include transition(transform);
+        }
+      }
+
+      &:before {
+        content: '';
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../img/img-bg-installation.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        @include transition(transform);
+      }
     }
   }
 
@@ -179,8 +199,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 50px;
-      height: 50px;
+      width: 49px;
+      height: 49px;
       border-radius: 100%;
       border: 1px solid #95a6b2;
       background-color: transparent;
