--- a/src/scss/_components/pedalbox/_working.scss
+++ b/src/scss/_components/pedalbox/_working.scss
@@ -19,11 +19,31 @@
 
     &-1 {
       z-index: 1;
-      background-image: url('../img/img-bg-installation.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
+      overflow: hidden;
+      position: relative;
       @include fluid(min-height, 320px, 1440px, 230px, 300px);
+
+      &:hover {
+        &:before {
+          transform: scale(1.1);
+          @include transition(transform);
+        }
+      }
+
+      &:before {
+        content: '';
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../img/img-bg-installation.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        @include transition(transform);
+      }
     }
   }
 
