Basket page - edits v0.1.

--- a/src/pug/components/basket/_delivery.pug
+++ b/src/pug/components/basket/_delivery.pug
@@ -56,12 +56,12 @@
                 img(src="./img/img-przelewy24.png" srcset="./img/img-przelewy24@2x.png 2x" alt="" title="")
               p!= "Przelewy24"
 
-            a.basket__delivery-box(href="#" class="" title="")
+            a.basket__delivery-box.basket__delivery-box--card(href="#" class="" title="")
               div
                 img(src="./img/img-płatnicza.png" srcset="./img/img-płatnicza@2x.png 2x" alt="" title="")
               p!= "Karta płatnicza"
 
-            a.basket__delivery-box(href="#" class="" title="")
+            a.basket__delivery-box.basket__delivery-box--money(href="#" class="" title="")
               div
                 img(src="./img/img-gotówka.png" srcset="./img/img-gotówka@2x.png 2x" alt="" title="")
               p!= "Gotówka"
