--- a/src/scss/_components/_basket.scss
+++ b/src/scss/_components/_basket.scss
@@ -67,12 +67,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 68px;
     border-radius: 2em;
     border: 2px solid #d72d42;
     background-color: #d72d42;
     color: $c-white;
     font-weight: 500;
+    @include fluid(height, 320px, 1440px, 50px, 68px);
     @include fluid(font-size, 320px, 1440px, 18px, 24px);
     @include transition(border, background-color, color);
 
@@ -88,6 +88,7 @@
     .basket__row--result & {
       max-width: 270px;
       margin-left: auto;
+      margin-right: auto;
     }
 
     &:hover {
@@ -270,6 +271,10 @@
           .basket__price-sum {
             font-size: 16px;
 
+            &:nth-of-type(1) {
+              margin-right: auto;
+            }
+
             span {
               font-size: 30px;
             }
@@ -358,14 +363,24 @@
         }
       }
 
+      &--card,
+      &--money {
+        > div {
+          img {
+            opacity: 0.65;
+          }
+        }
+      }
+
       &.is-active {
         > div {
           border-color: #0a1723;
           @include transition(border-color);
 
           img {
+            opacity: 1;
             filter: grayscale(0);
-            @include transition(filter);
+            @include transition(opacity, filter);
           }
 
           &:after {
@@ -400,7 +415,7 @@
           max-width: 100%;
           height: auto;
           filter: grayscale(100%);
-          @include transition(filter);
+          @include transition(opacity, filter);
         }
 
         &:after {
@@ -555,7 +570,7 @@
 
     &-text {
       padding-bottom: 50px;
-      @include fluid(font-size, 320px, 1440px, 10px, 20px);
+      @include fluid(font-size, 320px, 1440px, 12px, 20px);
       @include respond(max-small) {
         padding-bottom: 30px;
       }
@@ -734,6 +749,7 @@
       font-weight: 500;
       @include fluid(font-size, 320px, 1440px, 14px, 18px);
       @include respond(max-small) {
+        white-space: nowrap;
         display: flex;
         flex-direction: row-reverse;
       }
@@ -762,11 +778,17 @@
       font-size: 17px;
       font-weight: bold;
       @include fluid(width height, 320px, 1440px, 32px, 36px);
+      @include transition(background-color);
       @include respond(max-small) {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         right: 0;
+      }
+
+      &:hover {
+        background-color: #D6273C;
+        @include transition(background-color);
       }
     }
   }
@@ -892,8 +914,8 @@
 
     &-link {
       color: #d72d42;
+      font-size: 14px;
       font-weight: bold;
-      @include fluid(font-size, 320px, 1440px, 10px, 14px);
     }
   }
 }
